# Incrementing-as-a-Service

./: .gitlab-ci.yml  README.md  pyproject.toml
iaas/: app.py  config.py  controller.py  persistence.py  services.py
tests/: test_iaas.py
